--- a/index.html
+++ b/index.html
@@ -2,52 +2,127 @@
 <html lang="zh-CN">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>通行证生成 - 606520.xyz</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" />
+  <title>通行证 - 编辑生成</title>
   <link rel="stylesheet" href="style.css">
-  <!-- QRCode.js CDN -->
   <script src="https://cdn.jsdelivr.net/npm/qrcodejs/qrcode.min.js"></script>
 </head>
 <body>
-  <div class="wrap">
-    <header>
-      <div class="logo">通行证</div>
+  <div class="page-bg">
+
+    <!-- 顶部 -->
+    <header class="topbar">
+      <div class="logo-block">
+        <div class="logo-circle">福</div>
+        <div class="logo-text">
+          <div class="cn">福州大学</div>
+          <div class="en">FUZHOU UNIVERSITY</div>
+        </div>
+      </div>
+      <div class="big-title">通行证</div>
     </header>
 
-    <main class="card">
-      <div class="left">
-        <div class="avatar"></div>
-      </div>
+    <!-- 编辑表单（可折叠/展开） -->
+    <section class="editor" id="editor">
+      <div class="editor-inner">
+        <div class="field-row">
+          <label>访客姓名</label>
+          <input id="f_name" type="text" placeholder="例如：金贤洪">
+        </div>
 
-      <div class="right">
-        <label>访客姓名</label>
-        <input id="input-name" placeholder="请输入姓名（例如：金贤洪）" />
+        <div class="field-row">
+          <label>拜访对象</label>
+          <input id="f_target" type="text" placeholder="例如：戴逸清">
+        </div>
 
-        <label>拜访对象（可选）</label>
-        <input id="input-target" placeholder="可填写被访人或单位" />
+        <div class="field-row">
+          <label>所在部门</label>
+          <input id="f_dept" type="text" placeholder="例如：土木工程学院">
+        </div>
 
-        <div class="controls">
+        <div class="field-row">
+          <label>访问时段</label>
+          <input id="f_period" type="text" placeholder="例如：11-10 00:00 至 11-12 23:59">
+        </div>
+
+        <div class="field-row">
+          <label>通行方式</label>
+          <input id="f_vehicle" type="text" placeholder="例如：驾驶汽车 (闽A220AG)">
+        </div>
+
+        <div class="field-row">
+          <label>访问校区</label>
+          <input id="f_campus" type="text" placeholder="例如：所有校区">
+        </div>
+
+        <div class="editor-actions">
           <button id="btn-generate">生成通行证</button>
           <button id="btn-clear" class="muted">清除</button>
-        </div>
-
-        <div class="display">
-          <div class="big-name" id="display-name">—</div>
-          <div id="display-time" class="time">--:--:--</div>
-        </div>
-
-        <div id="qrcode-wrap">
-          <div id="qrcode"></div>
-        </div>
-
-        <div class="actions">
-          <a id="download-btn" href="#" download="qrcode.png" class="muted">下载二维码</a>
-          <span class="hint">或用手机扫码进入通行链接</span>
+          <button id="btn-toggle" class="muted">隐藏编辑区</button>
         </div>
       </div>
+    </section>
+
+    <!-- 白色卡片（展示） -->
+    <main class="pass-card" id="pass-card">
+      <div class="card-top">
+        <div class="avatar"></div>
+        <div class="visitor-info">
+          <div class="label">访客姓名</div>
+          <div class="visitor-name" id="visitor-name">金贤洪</div>
+        </div>
+      </div>
+
+      <div class="time-block">
+        <div class="time" id="now-time">22 : 07 : 58</div>
+        <div class="date-line">
+          <span class="date-line-left"></span>
+          <span class="date-text" id="now-date">2025年11月10日</span>
+          <span class="date-line-right"></span>
+        </div>
+      </div>
+
+      <div class="qrcode-wrap">
+        <div id="qrcode"></div>
+      </div>
+
+      <div class="hint-line">
+        <span>——————</span>
+        <span>请出示此通行证或扫码进入校园</span>
+        <span>——————</span>
+      </div>
+
+      <div class="info-row">
+        <div class="left">拜访对象</div>
+        <div class="right" id="target-text">戴逸清</div>
+      </div>
+      <div class="info-row">
+        <div class="left">所在部门</div>
+        <div class="right" id="dept-text">土木工程学院</div>
+      </div>
+      <div class="info-row">
+        <div class="left">访问时段</div>
+        <div class="right" id="period-text">11-10 00:00 至 11-12 23:59</div>
+      </div>
+      <div class="info-row">
+        <div class="left">通行方式</div>
+        <div class="right" id="vehicle-text">驾驶汽车 (闽A220AG)</div>
+      </div>
+      <div class="info-row">
+        <div class="left">访问校区</div>
+        <div class="right" id="campus-text">所有校区</div>
+      </div>
+
+      <div class="safe-block">
+        <div class="safe-cn">安全校园，始于你我</div>
+        <div class="safe-en">A safe campus starts with you and me</div>
+      </div>
+
     </main>
 
-    <footer class="foot">© 606520.xyz</footer>
+    <footer class="footer">
+      福建恒智信息技术有限公司 技术支持
+    </footer>
   </div>
 
   <script src="script.js"></script>
