--- a/index.html
+++ b/index.html
@@ -77,14 +77,15 @@
         <div class="safe-en">A safe campus starts with you and me</div>
       </div>
 
+         <!-- 安全提示 -->
+      <div class="safe-block">
+        <div class="safe-cn">安全校园，始于你我</div>
+        <div class="safe-en">A safe campus starts with you and me</div>
+      </div>
+
     </main>
 
-    <footer class="footer">
-      福建恒智信息技术有限公司 技术支持
-    </footer>
-  </div>
-
- <!-- 编辑表单（可折叠/展开） -->
+    <!-- 编辑表单（放在卡片后面，仍然在 .page-bg 内） -->
     <section class="editor" id="editor">
       <div class="editor-inner">
         <div class="field-row">
@@ -124,8 +125,16 @@
         </div>
       </div>
     </section>
-  
+
+    <!-- 页脚仍然在 .page-bg 内 -->
+    <footer class="footer">
+      福建恒智信息技术有限公司 技术支持
+    </footer>
+
+  </div> <!-- 这里是 .page-bg 的闭合标签，必须在 editor 和 footer 之后 -->
+
   <script src="script.js"></script>
 </body>
 </html>
+
 
