--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
   <div class="page-bg">
 
     <!-- 顶部 -->
-    <header class="topbar">
-      <div class="logo-block">
-        <div class="logo-circle">福</div>
-        <div class="logo-text">
-          <div class="cn">福州大学</div>
-          <div class="en">FUZHOU UNIVERSITY</div>
-        </div>
-      </div>
-      <div class="big-title">通行证</div>
-    </header>
+    <<header class="topbar">
+  <div class="logo-block">
+    <!-- 使用图片作为 Logo：确保 fzulogo.png 已上传到仓库根目录 -->
+    <img src="fzulogo.png" alt="Fuzhou University Logo" class="logo-img" />
+    <div class="logo-text">
+      <div class="cn">福州大学</div>
+      <div class="en">FUZHOU UNIVERSITY</div>
+    </div>
+  </div>
+  <div class="big-title">通行证</div>
+</header>
 
     <!-- 白色卡片（展示） -->
     <main class="pass-card" id="pass-card">
@@ -136,5 +137,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
