--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="page-bg">
 
     <!-- 顶部 -->
-    <<header class="topbar">
+    <header class="topbar">
   <div class="logo-block">
     <!-- 使用图片作为 Logo：确保 fzulogo.png 已上传到仓库根目录 -->
     <img src="fzulogo.png" alt="Fuzhou University Logo" class="logo-img" />
@@ -128,6 +128,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
