--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
       
          <!-- 安全提示 -->
       <div class="safe-block">
-        <div class="safe-cn">安全校园，始于你我</div>
+        
+        <div class="safe-cn">安全校园, 始于你我</div>
         <div class="safe-en">A safe campus starts with you and me</div>
       </div>
 
@@ -128,6 +129,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
