--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
       
          <!-- 安全提示 -->
       <div class="safe-block">
-        
+       <div class="safe-text">
         <div class="safe-cn">安全校园, 始于你我</div>
         <div class="safe-en">A safe campus starts with you and me</div>
+       </div> 
       </div>
 
     </main>
@@ -129,6 +130,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
