--- a/index.html
+++ b/index.html
@@ -70,10 +70,14 @@
       </div>
       
          <!-- 安全提示 -->
-      <div class="safe-block">
-        <div class="safe-cn">安全校园, 始于你我</div>
-        <div class="safe-en">A safe campus starts with you and me</div>
-      </div>
+    <div class="safe-block">
+  <div class="safe-text">
+    <!-- 中文逗号用 span.ascii 包住，确保在手机上也用半角 glyph -->
+    <div class="safe-cn">安全校园<span class="ascii">,</span> 始于你我</div>
+    <div class="safe-en">A safe campus starts with you and me</div>
+  </div>
+</div>
+
 
     </main>
 
@@ -128,6 +132,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
