--- a/index.html
+++ b/index.html
@@ -70,15 +70,11 @@
       </div>
       
          <!-- 安全提示 -->
-<div class="safe-block">
-  <div class="safe-text" id="safeText">
-    <!-- 中文逗号用 span.ascii 包住，确保是 ASCII U+002C 并可单独设置字体 -->
-    <div class="safe-cn" id="safeCn">安全校园<span class="ascii">,</span> 始于你我</div>
-    <div class="safe-en" id="safeEn">A safe campus starts with you and me</div>
-  </div>
-</div>
-
-
+      <div class="safe-block">
+        
+        <div class="safe-cn">安全校园, 始于你我</div>
+        <div class="safe-en">A safe campus starts with you and me</div>
+      </div>
 
     </main>
 
@@ -133,10 +129,6 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
 
 
 
