--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
       </div>
       <div class="info-row">
         <div class="left">访问校区</div>
-        <div class="right" id="campus-text">所有校区</div>
+        <div class="right" id="campus-text">所有校区,</div>
       </div>
       
          <!-- 安全提示 -->
       <div class="safe-block">
         
-        <div class="safe-cn">安全校园, 始于你我</div>
+        <div class="safe-cn">安 全 校 园,  始 于 你 我</div>
         <div class="safe-en">A safe campus starts with you and me</div>
       </div>
 
@@ -108,7 +108,7 @@
 
         <div class="field-row">
           <label>访问校区</label>
-          <input id="f_campus" type="text" placeholder="例如：所有校区">
+          <input id="f_campus" type="text" placeholder="例如：所有校区,尾巴这个逗号很重要">
         </div>
 
         <div class="editor-actions">
@@ -129,6 +129,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
