--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
       </div>
 
       <div class="hint-line">
+        <span>——————</span>
         <span>请出示此通行证或扫码进入校园</span>
+        <span>——————</span>
       </div>
 
       <div class="info-row">
@@ -64,13 +66,13 @@
       </div>
       <div class="info-row">
         <div class="left">访问校区</div>
-        <div class="right" id="campus-text">所有校区,</div>
+        <div class="right" id="campus-text">所有校区</div>
       </div>
       
          <!-- 安全提示 -->
       <div class="safe-block">
         
-        <div class="safe-cn">安  全  校  园  ,  始  于  你  我</div>
+        <div class="safe-cn">安全校园, 始于你我</div>
         <div class="safe-en">A safe campus starts with you and me</div>
       </div>
 
@@ -106,7 +108,7 @@
 
         <div class="field-row">
           <label>访问校区</label>
-          <input id="f_campus" type="text" placeholder="例如：所有校区,尾巴这个逗号很重要">
+          <input id="f_campus" type="text" placeholder="例如：所有校区">
         </div>
 
         <div class="editor-actions">
@@ -118,22 +120,15 @@
     </section>
 
     <!-- 页脚仍然在 .page-bg 内 -->
-<footer class="footer">
-  <div class="footer-inner">
-    <img src="HZlogo.png" alt="恒智信息 Logo" class="footer-logo">
-    <span class="footer-text">福建恒智信息技术有限公司 技术支持</span>
-  </div>
-</footer>
+    <footer class="footer">
+      福建恒智信息技术有限公司 技术支持
+    </footer>
 
   </div> <!-- 这里是 .page-bg 的闭合标签，必须在 editor 和 footer 之后 -->
 
   <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
 
 
 
