--- a/index.html
+++ b/index.html
@@ -120,15 +120,21 @@
     </section>
 
     <!-- 页脚仍然在 .page-bg 内 -->
-    <footer class="footer">
-      福建恒智信息技术有限公司 技术支持
-    </footer>
+<footer class="footer">
+  <div class="footer-inner">
+    <img src="HZlogo.png" alt="恒智信息 Logo" class="footer-logo">
+    <span class="footer-text">福建恒智信息技术有限公司 技术支持</span>
+  </div>
+</footer>
+
+
 
   </div> <!-- 这里是 .page-bg 的闭合标签，必须在 editor 和 footer 之后 -->
 
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
