--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
   <span>请出示此通行证或扫码进入校园</span>
 </div>
 
+      <div class="hint-line">
+        <span>------</span>
+        <span>请出示此通行证或扫码进入校园</span>
+        <span>------</span>
+      </div>
+
 
       
       <div class="info-row">
@@ -64,11 +70,11 @@
       </div>
       <div class="info-row">
         <div class="left">通行方式</div>
-        <div class="right" id="vehicle-text">驾驶汽车 (闽A220AG)</div>
+        <div class="right" id="vehicle-text">驾驶汽车 (闽A22A0G)</div>
       </div>
       <div class="info-row">
         <div class="left">访问校区</div>
-        <div class="right" id="campus-text">所有校区</div>
+        <div class="right" id="campus-text">所有校区,</div>
       </div>
       
          <!-- 安全提示 -->
@@ -105,12 +111,12 @@
 
         <div class="field-row">
           <label>通行方式</label>
-          <input id="f_vehicle" type="text" placeholder="例如：驾驶汽车 (闽A220AG)">
+          <input id="f_vehicle" type="text" placeholder="例如：驾驶汽车 (闽A22A0G)">
         </div>
 
         <div class="field-row">
           <label>访问校区</label>
-          <input id="f_campus" type="text" placeholder="例如：所有校区">
+          <input id="f_campus" type="text" placeholder="例如：所有校区,尾巴这个逗号很重要">
         </div>
 
         <div class="editor-actions">
@@ -136,6 +142,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
