--- a/index.html
+++ b/index.html
@@ -44,14 +44,10 @@
 
 
 
-<div class="hint-line">
-  <span>请出示此通行证或扫码进入校园</span>
-</div>
-
       <div class="hint-line">
-        <span>------</span>
+        <span>----------</span>
         <span>请出示此通行证或扫码进入校园</span>
-        <span>------</span>
+        <span>----------</span>
       </div>
 
 
@@ -142,6 +138,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
